--- a/stylesheets/dial.css
+++ b/stylesheets/dial.css
@@ -6,7 +6,7 @@
     font-size:3mm;
     font-family:'Roboto Condensed', sans-serif;
     letter-spacing:0.15mm;
-    fill:#cbb;
+    fill:#fff;
     text-align:left;
     text-anchor:left;
   }
